--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,11 @@
 <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate" />
 <meta http-equiv="Expires" content="0" />
 <meta http-equiv="Pragma" content="no-cache" />
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
 <title>EUMC EMS</title>
+<link rel="apple-touch-icon" href="images/eumc_icon.png" />
+<link rel="apple-touch-startup-image" href="images/eumc_startup.png"/>
 <link rel="shortcut icon" href="images/favicon_eumc.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="css/bootstrap-reboot.min.css"/>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
@@ -1033,7 +1037,7 @@
 									</tr>
 								</thead>
 							</table>
-							<table class="table table_03 table_02_s">
+							<table class="table table_03 table_02_s table_popup">
 								<tbody>
 									<tr class="row">
 										<td class="column">
